# zeus

./: .gitignore  Cargo.toml  LICENSE-MIT  readme.md
crates/zeus-backend/: Cargo.toml
crates/zeus-backend/src/: db.rs  lib.rs  types.rs
crates/zeus-chain/: Cargo.toml
crates/zeus-chain/src/: chain_id.rs  lib.rs  rpc.rs  tx.rs
crates/zeus-chain/src/defi_types/: mod.rs  pool.rs
crates/zeus-chain/src/defi_types/currency/: erc20.rs  mod.rs
crates/zeus-chain/src/evm_types/: dummy_account.rs  mod.rs
crates/zeus-chain/src/evm_types/forked_db/: mod.rs
crates/zeus-chain/src/utils/: misc.rs  mod.rs
crates/zeus-chain/src/utils/oracles/: block.rs  mod.rs
crates/zeus-core/: Cargo.toml
crates/zeus-core/src/: encryption.rs  lib.rs
crates/zeus-core/src/profile/: mod.rs  profile.rs  wallet.rs
crates/zeus-defi/: Cargo.toml
crates/zeus-defi/src/: lib.rs  readme.md
crates/zeus-defi/src/dex/uniswap/: pool.rs
crates/zeus-defi/src/erc20/: mod.rs
crates/zeus-gui/: Cargo.toml
crates/zeus-gui/src/: app.rs  lib.rs
crates/zeus-gui/src/fonts/: mod.rs
crates/zeus-gui/src/gui/: misc.rs  mod.rs  settings.rs  state.rs
crates/zeus-gui/src/gui/components/: mod.rs  send_crypto_screen.rs  swap_ui.rs  wallet.rs
crates/zeus-gui/src/gui/icons/: img_credits.md  mod.rs
crates/zeus-gui/src/gui/settings/: mod.rs
crates/zeus-gui/src/gui/swap_ui/: mod.rs  state.rs
crates/zeus-gui/src/gui/wallet_ui/: mod.rs
crates/zeus-gui/src/icons/: mod.rs
crates/zeus-gui/src/icons/chain/: credits.md
crates/zeus-gui/src/icons/currency/: credits.md
crates/zeus-gui/src/icons/misc/: credits.md
crates/zeus-gui/src/icons/settings/: credits.md
crates/zeus-gui/src/icons/wallet/: credits.md
crates/zeus-gui/src/theme/: gradient.rs  mod.rs
crates/zeus-shared-types/: Cargo.toml
crates/zeus-shared-types/src/: cache.rs  lib.rs
crates/zeus-shared-types/src/state/: data.rs  error.rs  info.rs  mod.rs  shared_ui.rs  swap_ui.rs
crates/zeus-types/: Cargo.toml
crates/zeus-types/src/: lib.rs
crates/zeus-types/src/app_data/: mod.rs
crates/zeus-types/src/app_state/: mod.rs  state.rs
crates/zeus-types/src/defi/: currency.rs  erc20.rs  mod.rs  utils.rs
crates/zeus-types/src/defi/dex/uniswap/: mod.rs  pool.rs
crates/zeus-types/src/defi/erc20/: mod.rs
crates/zeus-types/src/defi/zeus_router/: mod.rs
crates/zeus-types/src/forked_db/: global_backend.rs
crates/zeus-types/src/profile/: encryption.rs  mod.rs
crates/zeus-utils/: Cargo.toml
crates/zeus-utils/src/: dummy_account.rs  lib.rs
crates/zeus-utils/src/oracles/: block.rs  fork.rs  mod.rs  price.rs
src/: main.rs
