workspace = { members = ["crates/zeus-gui", "crates/zeus-utils", "crates/zeus-backend", "crates/zeus-types", "crates/zeus-utils"] }
[package]
name = "Zeus"
authors = ["Michalis Molfetas"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Graphical User Interface
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = {version = "0.27.2", features = ["svg", "image"]}
hello_egui = "0.4.2"
image = "0.25.1"

# Local Crates
zeus-gui = { path = "crates/zeus-gui" }


alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4000b77", features = [
    "contract",
    "network",
    "node-bindings",
    "providers",
    "provider-ws",
    "rpc-client",
    "rpc-client-ws",
    "rpc-types-eth",
    "signers",
    "signer-wallet",
] }
revm = { version = "9.0.0", features = [
    "serde",
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
    "optional_gas_refund",
] }
anyhow = "1.0.44"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
crossbeam = "0.8.4"