workspace = { members = ["crates/zeus-gui", "crates/zeus-utils", "crates/zeus-backend", "crates/zeus-types", "crates/zeus-utils"] }
[package]
name = "Zeus"
authors = ["Michalis Molfetas"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui_extras = {version = "0.27.2", features = ["svg", "image"]}
zeus-gui = { path = "crates/zeus-gui" }