workspace = { members = ["crates/zeus-gui", "crates/zeus-backend", "crates/zeus-chain", "crates/zeus-core", "crates/zeus-shared-types"] }
[package]
name = "Zeus"
authors = ["Michalis Molfetas"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
egui_extras = {version = "0.28.1", features = ["svg", "image"]}
zeus-gui = { path = "crates/zeus-gui" }
