[package]
name = "zeus-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeus-chain = { path = "../zeus-chain" }
zeus-core = {path = "../zeus-core"}
zeus-shared-types = { path = "../zeus-shared-types" }



rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2_sqlite = "0.24.0"
r2d2 = "0.8.10"

bigdecimal = "0.4.5"
tracing = "0.1.40"
tokio = { version = "1.35.1", features = ["full"] }
crossbeam = "0.8.4"
anyhow = "1.0.44"