[package]
name = "zeus-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", features = ["full"] }

revm = { version = "10.0.0", features = [
    "serde",
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
    "optional_gas_refund",
] }

tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.44"
lazy_static = "1.4.0"

tracing = "0.1.40"
thiserror = "1.0.37"
tiny-keccak = "2.0.2"
futures = "0.3.5"
futures-util = "0.3.30"
eyre = "0.6.8"
hashbrown = "0.14.0"
crossbeam = "0.8.4"
bigdecimal = "0.4.5"


serde = "1.0.203"
serde_json = "1.0.117"