[package]
name = "zeus-core"
version = "0.1.0"
edition = "2021"

[dependencies]

alloy = { version = "0.1", features = ["full"] }


# Crypto
password-hash = "0.5.0"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.8"

lazy_static = "1.4.0"
anyhow = "1.0.44"
serde = "1.0.203"
serde_json = "1.0.117"