[package]
name = "zeus-defi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zeus-types = { path = "../zeus-types" }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4000b77", features = [
    "contract",
    "network",
    "node-bindings",
    "providers",
    "provider-ws",
    "rpc-client",
    "rpc-client-ws",
    "rpc-types-eth",
    "signers",
    "signer-wallet",
] }
revm = { version = "9.0.0", features = [
    "serde",
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
    "optional_gas_refund",
] }
anyhow = "1.0.44"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }