[package]
name = "zeus-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Local Crates
zeus-core = { path = "../zeus-core" }
zeus-backend = {path = "../zeus-backend"}
zeus-chain = {path = "../zeus-chain"}
zeus-shared-types = { path = "../zeus-shared-types" }


# Tracing
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "fmt"]}
tracing-appender = "0.2.3"

# GUI
eframe = "0.28.1"
image = "0.25.1"

anyhow = "1.0.44"
crossbeam = "0.8.4"
lazy_static = "1.4.0"