[package]
name = "zeus-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4000b77", features = [
    "contract",
    "network",
    "node-bindings",
    "providers",
    "provider-ws",
    "rpc-client",
    "rpc-client-ws",
    "rpc-types-eth",
    "signers",
    "signer-wallet",
] }

revm = { version = "9.0.0", features = [
    "serde",
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
    "optional_gas_refund",
] }

# Crypto
password-hash = "0.5.0"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.8"


tracing = "0.1.40"
bigdecimal = "0.4.5"
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.37"
tiny-keccak = "2.0.2"
futures = "0.3.5"
futures-util = "0.3.30"
eyre = "0.6.8"
hashbrown = "0.14.0"
serde = "1.0.203"
serde_json = "1.0.117"
anyhow = "1.0.44"
lazy_static = "1.4.0"