[package]
name = "zeus-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeus-types = {path = "../zeus-types"}

alloy = { version = "0.1", features = ["full"] }

revm = { version = "10.0.0", features = [
    "serde",
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
    "optional_gas_refund",
] }

tracing = "0.1.40"
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.37"
tiny-keccak = "2.0.2"
futures = "0.3.5"
futures-util = "0.3.30"
eyre = "0.6.8"
hashbrown = "0.14.0"
anyhow = "1.0.44"
bigdecimal = "0.4.1"
crossbeam = "0.8.4"
lazy_static = "1.5.0"